<?xml version="1.0"?>
<package format="3">
  <name>network_quality</name>
  <version>0.1.0</version>
  <description>Network quality monitoring node (ping + iface bandwidth + iperf on-demand + optional app-level echo)</description>
  <maintainer email="you@example.com">You</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  
  <exec_depend>websockets</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
